syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServiceProduct.Order";

service OrderGrpc{
	rpc GetAllOfProduct(Id) returns (Orders);
}

message Id {
	string SearchId = 1;
}

message Order{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue UserId = 2;
	google.protobuf.StringValue AddressId = 3;
	google.protobuf.StringValue ProductId = 4;
	google.protobuf.StringValue OptionId = 5;
	int32 Quantity = 6;
	double Price = 7;
	double Discount = 8;
	double ShippingFee = 9;
	google.protobuf.StringValue Status = 10;
	google.protobuf.Timestamp CreateAt = 11;
	google.protobuf.Timestamp UpdateAt = 12;
}

message Orders{
	repeated Order Item = 1;
}
